--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ mapboxgl.accessToken = 'pk.eyJ1IjoiZ2FiZWF0dW5zdyIsImEiOiJjamx0YXQ1eGIwNzdxM3FwZ
 var map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/mapbox/streets-v9',
-    center: [151.004105, -33.813002],
-    zoom: 9,
+    center: [151.15025639533994, -33.92976106874769],
+    zoom: 15,
     pitch: 45,
     bearing: -17.6
 });
